<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/baseline_face_black_48"
            android:title="@string/menu_title_play" />
        <item
            android:id="@+id/nav_winning_list"
            android:icon="@drawable/baseline_face_black_48"
            android:title="@string/menu_title_winning_list" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/baseline_face_black_48"
            android:title="@string/menu_title_chat" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_face_black_48"
            android:title="@string/menu_title_profile" />
    </group>
</menu>
